{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 2049,
  "lineage": "83afb4b6-81ab-bab6-8409-7d90f01672cb",
  "resources": [
    {
      "module": "module.linux_instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fb99f22ad0184043",
            "arn": "arn:aws:ec2:ca-central-1:247867391235:instance/i-0335ee990b1cec5c0",
            "associate_public_ip_address": true,
            "availability_zone": "ca-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "app1-ec2-role-0",
            "id": "i-0335ee990b1cec5c0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "pro1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-018723a761ce76315",
            "private_dns": "ip-10-0-3-231.ca-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.231",
            "public_dns": "ec2-3-99-178-145.ca-central-1.compute.amazonaws.com",
            "public_ip": "3.99.178.145",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a43e63ee1e6413fa",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f24edacf5283c6db",
            "tags": {
              "Environment": "dev",
              "Name": "linux-ec2-cluster-0",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "linux-ec2-cluster-0",
              "Terraform": "true"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01ff4373173e5ccde"
            ]
          },
          "dependencies": [
            "module.linux_instance.aws_iam_instance_profile.ec2_profile",
            "module.linux_instance.aws_iam_role.ec2_role",
            "module.linux_instance.module.vpc.aws_internet_gateway.my_igw",
            "module.linux_instance.module.vpc.aws_subnet.public_subnet",
            "module.linux_instance.module.vpc.aws_vpc.my_vpc",
            "module.vpc.aws_internet_gateway.my_igw",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_route_table_association.public_subnet_association",
            "module.vpc.aws_security_group.my_security_group",
            "module.vpc.aws_security_group.windows_security_group",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fb99f22ad0184043",
            "arn": "arn:aws:ec2:ca-central-1:247867391235:instance/i-0dcf4465833c313f0",
            "associate_public_ip_address": true,
            "availability_zone": "ca-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "app1-ec2-role-1",
            "id": "i-0dcf4465833c313f0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "pro1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b39dfecf6a062ae1",
            "private_dns": "ip-10-0-3-167.ca-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.167",
            "public_dns": "ec2-15-222-244-84.ca-central-1.compute.amazonaws.com",
            "public_ip": "15.222.244.84",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-002c6865adda9ab2c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f24edacf5283c6db",
            "tags": {
              "Environment": "dev",
              "Name": "linux-ec2-cluster-1",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "linux-ec2-cluster-1",
              "Terraform": "true"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01ff4373173e5ccde"
            ]
          },
          "dependencies": [
            "module.linux_instance.aws_iam_instance_profile.ec2_profile",
            "module.linux_instance.aws_iam_role.ec2_role",
            "module.linux_instance.module.vpc.aws_internet_gateway.my_igw",
            "module.linux_instance.module.vpc.aws_subnet.public_subnet",
            "module.linux_instance.module.vpc.aws_vpc.my_vpc",
            "module.vpc.aws_internet_gateway.my_igw",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_route_table_association.public_subnet_association",
            "module.vpc.aws_security_group.my_security_group",
            "module.vpc.aws_security_group.windows_security_group",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.linux_instance.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:247867391235:internet-gateway/igw-088b4b19c7640f2d9",
            "id": "igw-088b4b19c7640f2d9",
            "owner_id": "247867391235",
            "vpc_id": "vpc-031aa8e30b36624f4"
          },
          "dependencies": [
            "module.linux_instance.module.vpc.aws_vpc.my_vpc",
            "module.vpc.aws_internet_gateway.my_igw",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_route_table_association.public_subnet_association",
            "module.vpc.aws_security_group.my_security_group",
            "module.vpc.aws_security_group.windows_security_group",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.linux_instance.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:247867391235:route-table/rtb-008b0d8e20509f9c5",
            "id": "rtb-008b0d8e20509f9c5",
            "owner_id": "247867391235",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-088b4b19c7640f2d9",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-031aa8e30b36624f4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.linux_instance.module.vpc.aws_internet_gateway.my_igw",
            "module.linux_instance.module.vpc.aws_vpc.my_vpc",
            "module.vpc.aws_internet_gateway.my_igw",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_route_table_association.public_subnet_association",
            "module.vpc.aws_security_group.my_security_group",
            "module.vpc.aws_security_group.windows_security_group",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.linux_instance.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04456c17066be36bf",
            "route_table_id": "rtb-008b0d8e20509f9c5",
            "subnet_id": "subnet-0f24edacf5283c6db"
          },
          "dependencies": [
            "module.linux_instance.module.vpc.aws_internet_gateway.my_igw",
            "module.linux_instance.module.vpc.aws_route_table.public_route_table",
            "module.linux_instance.module.vpc.aws_subnet.public_subnet",
            "module.linux_instance.module.vpc.aws_vpc.my_vpc",
            "module.vpc.aws_internet_gateway.my_igw",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_route_table_association.public_subnet_association",
            "module.vpc.aws_security_group.my_security_group",
            "module.vpc.aws_security_group.windows_security_group",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.linux_instance.module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:247867391235:security-group/sg-0d0d311260c11d0cb",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d0d311260c11d0cb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20240121003702043600000003",
            "name_prefix": "terraform-",
            "owner_id": "247867391235",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-031aa8e30b36624f4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.linux_instance.module.vpc.aws_vpc.my_vpc",
            "module.vpc.aws_internet_gateway.my_igw",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_route_table_association.public_subnet_association",
            "module.vpc.aws_security_group.my_security_group",
            "module.vpc.aws_security_group.windows_security_group",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.linux_instance.module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "windows_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:247867391235:security-group/sg-07d64371f5179d34b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07d64371f5179d34b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "terraform-20240121003702048200000005",
            "name_prefix": "terraform-",
            "owner_id": "247867391235",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-031aa8e30b36624f4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.linux_instance.module.vpc.aws_vpc.my_vpc",
            "module.vpc.aws_internet_gateway.my_igw",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_route_table_association.public_subnet_association",
            "module.vpc.aws_security_group.my_security_group",
            "module.vpc.aws_security_group.windows_security_group",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.linux_instance.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:247867391235:subnet/subnet-0dcaa5dde46e37abf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1a",
            "availability_zone_id": "cac1-az1",
            "cidr_block": "10.0.200.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dcaa5dde46e37abf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "247867391235",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-031aa8e30b36624f4"
          },
          "dependencies": [
            "module.linux_instance.module.vpc.aws_vpc.my_vpc",
            "module.vpc.aws_internet_gateway.my_igw",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_route_table_association.public_subnet_association",
            "module.vpc.aws_security_group.my_security_group",
            "module.vpc.aws_security_group.windows_security_group",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:247867391235:subnet/subnet-0c6768cac77765b9d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1b",
            "availability_zone_id": "cac1-az2",
            "cidr_block": "10.0.201.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c6768cac77765b9d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "247867391235",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-031aa8e30b36624f4"
          },
          "dependencies": [
            "module.linux_instance.module.vpc.aws_vpc.my_vpc",
            "module.vpc.aws_internet_gateway.my_igw",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_route_table_association.public_subnet_association",
            "module.vpc.aws_security_group.my_security_group",
            "module.vpc.aws_security_group.windows_security_group",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.linux_instance.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:247867391235:subnet/subnet-0f24edacf5283c6db",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1a",
            "availability_zone_id": "cac1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f24edacf5283c6db",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "247867391235",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-031aa8e30b36624f4"
          },
          "dependencies": [
            "module.linux_instance.module.vpc.aws_internet_gateway.my_igw",
            "module.linux_instance.module.vpc.aws_vpc.my_vpc",
            "module.vpc.aws_internet_gateway.my_igw",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_route_table_association.public_subnet_association",
            "module.vpc.aws_security_group.my_security_group",
            "module.vpc.aws_security_group.windows_security_group",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:247867391235:subnet/subnet-0a7f7fb563a170df0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1b",
            "availability_zone_id": "cac1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a7f7fb563a170df0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "247867391235",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-031aa8e30b36624f4"
          },
          "dependencies": [
            "module.linux_instance.module.vpc.aws_internet_gateway.my_igw",
            "module.linux_instance.module.vpc.aws_vpc.my_vpc",
            "module.vpc.aws_internet_gateway.my_igw",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_route_table_association.public_subnet_association",
            "module.vpc.aws_security_group.my_security_group",
            "module.vpc.aws_security_group.windows_security_group",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.linux_instance.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:247867391235:vpc/vpc-031aa8e30b36624f4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-054a97761986309eb",
            "default_route_table_id": "rtb-0e6a0578173950efa",
            "default_security_group_id": "sg-01ff4373173e5ccde",
            "dhcp_options_id": "dopt-1c251774",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-031aa8e30b36624f4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e6a0578173950efa",
            "owner_id": "247867391235",
            "tags": {
              "Name": "my-vpc"
            },
            "tags_all": {
              "Name": "my-vpc"
            }
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.my_igw",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_route_table_association.public_subnet_association",
            "module.vpc.aws_security_group.my_security_group",
            "module.vpc.aws_security_group.windows_security_group",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:247867391235:internet-gateway/igw-00d76725b189d43e1",
            "id": "igw-00d76725b189d43e1",
            "owner_id": "247867391235",
            "vpc_id": "vpc-0cedb392d82ca9752"
          },
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:247867391235:route-table/rtb-06ab3d1f9ba399ca4",
            "id": "rtb-06ab3d1f9ba399ca4",
            "owner_id": "247867391235",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00d76725b189d43e1",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0cedb392d82ca9752"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.my_igw",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d0b64ab5d13034b4",
            "route_table_id": "rtb-06ab3d1f9ba399ca4",
            "subnet_id": "subnet-07671276579ff1d01"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.my_igw",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:247867391235:security-group/sg-0e50f16bd261a03b5",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e50f16bd261a03b5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20240121003639267400000001",
            "name_prefix": "terraform-",
            "owner_id": "247867391235",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0cedb392d82ca9752"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "windows_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:247867391235:security-group/sg-0f7ef5b2a83e000d6",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f7ef5b2a83e000d6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "terraform-20240121003639267700000002",
            "name_prefix": "terraform-",
            "owner_id": "247867391235",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0cedb392d82ca9752"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:247867391235:subnet/subnet-086ea16baf6e7271c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1a",
            "availability_zone_id": "cac1-az1",
            "cidr_block": "10.0.200.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-086ea16baf6e7271c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "247867391235",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0cedb392d82ca9752"
          },
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:247867391235:subnet/subnet-0163e5737d1f8ebe8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1b",
            "availability_zone_id": "cac1-az2",
            "cidr_block": "10.0.201.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0163e5737d1f8ebe8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "247867391235",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0cedb392d82ca9752"
          },
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:247867391235:subnet/subnet-07671276579ff1d01",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1a",
            "availability_zone_id": "cac1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07671276579ff1d01",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "247867391235",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0cedb392d82ca9752"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.my_igw",
            "module.vpc.aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:247867391235:subnet/subnet-044a7f3b1984c3bdf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1b",
            "availability_zone_id": "cac1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-044a7f3b1984c3bdf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "247867391235",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0cedb392d82ca9752"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.my_igw",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:247867391235:vpc/vpc-0cedb392d82ca9752",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-042e0fbfe9c2d928c",
            "default_route_table_id": "rtb-051322ad54e3c2985",
            "default_security_group_id": "sg-00553dff248bf75d7",
            "dhcp_options_id": "dopt-1c251774",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0cedb392d82ca9752",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-051322ad54e3c2985",
            "owner_id": "247867391235",
            "tags": {
              "Name": "my-vpc"
            },
            "tags_all": {
              "Name": "my-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.windows_instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-057e9b22dd2a06f68",
            "arn": "arn:aws:ec2:ca-central-1:247867391235:instance/i-0d0b44b14e18ea588",
            "associate_public_ip_address": true,
            "availability_zone": "ca-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d0b44b14e18ea588",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06321bca8acc82021",
            "private_dns": "ip-10-0-3-50.ca-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.50",
            "public_dns": "ec2-35-182-245-231.ca-central-1.compute.amazonaws.com",
            "public_ip": "35.182.245.231",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08d7f4897682765d7",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09da15302ea8e09fc",
            "tags": {
              "Environment": "dev",
              "Name": "windows-ec2-cluster-0",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "windows-ec2-cluster-0",
              "Terraform": "true"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-007e892ad2771894d"
            ]
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.my_igw",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_route_table_association.public_subnet_association",
            "module.vpc.aws_security_group.my_security_group",
            "module.vpc.aws_security_group.windows_security_group",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.my_vpc",
            "module.windows_instance.module.vpc.aws_internet_gateway.my_igw",
            "module.windows_instance.module.vpc.aws_security_group.windows_security_group",
            "module.windows_instance.module.vpc.aws_subnet.public_subnet",
            "module.windows_instance.module.vpc.aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-057e9b22dd2a06f68",
            "arn": "arn:aws:ec2:ca-central-1:247867391235:instance/i-084d276c746e191ab",
            "associate_public_ip_address": true,
            "availability_zone": "ca-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-084d276c746e191ab",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-00004d3670863acea",
            "private_dns": "ip-10-0-3-162.ca-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.162",
            "public_dns": "ec2-35-183-26-234.ca-central-1.compute.amazonaws.com",
            "public_ip": "35.183.26.234",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d21dc0d8fd6d8ec2",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09da15302ea8e09fc",
            "tags": {
              "Environment": "dev",
              "Name": "windows-ec2-cluster-1",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "windows-ec2-cluster-1",
              "Terraform": "true"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-007e892ad2771894d"
            ]
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.my_igw",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_route_table_association.public_subnet_association",
            "module.vpc.aws_security_group.my_security_group",
            "module.vpc.aws_security_group.windows_security_group",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.my_vpc",
            "module.windows_instance.module.vpc.aws_internet_gateway.my_igw",
            "module.windows_instance.module.vpc.aws_security_group.windows_security_group",
            "module.windows_instance.module.vpc.aws_subnet.public_subnet",
            "module.windows_instance.module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.windows_instance.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:247867391235:internet-gateway/igw-022ff2cc77daf40c8",
            "id": "igw-022ff2cc77daf40c8",
            "owner_id": "247867391235",
            "vpc_id": "vpc-030912113de913a72"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.my_igw",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_route_table_association.public_subnet_association",
            "module.vpc.aws_security_group.my_security_group",
            "module.vpc.aws_security_group.windows_security_group",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.my_vpc",
            "module.windows_instance.module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.windows_instance.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:247867391235:route-table/rtb-0fcc807df7819dfe5",
            "id": "rtb-0fcc807df7819dfe5",
            "owner_id": "247867391235",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-022ff2cc77daf40c8",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-030912113de913a72"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.my_igw",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_route_table_association.public_subnet_association",
            "module.vpc.aws_security_group.my_security_group",
            "module.vpc.aws_security_group.windows_security_group",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.my_vpc",
            "module.windows_instance.module.vpc.aws_internet_gateway.my_igw",
            "module.windows_instance.module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.windows_instance.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03d569a46eb2bf591",
            "route_table_id": "rtb-0fcc807df7819dfe5",
            "subnet_id": "subnet-09da15302ea8e09fc"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.my_igw",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_route_table_association.public_subnet_association",
            "module.vpc.aws_security_group.my_security_group",
            "module.vpc.aws_security_group.windows_security_group",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.my_vpc",
            "module.windows_instance.module.vpc.aws_internet_gateway.my_igw",
            "module.windows_instance.module.vpc.aws_route_table.public_route_table",
            "module.windows_instance.module.vpc.aws_subnet.public_subnet",
            "module.windows_instance.module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.windows_instance.module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:247867391235:security-group/sg-0b5c4518aaeb4396f",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b5c4518aaeb4396f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20240121003702047500000004",
            "name_prefix": "terraform-",
            "owner_id": "247867391235",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-030912113de913a72"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.my_igw",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_route_table_association.public_subnet_association",
            "module.vpc.aws_security_group.my_security_group",
            "module.vpc.aws_security_group.windows_security_group",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.my_vpc",
            "module.windows_instance.module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.windows_instance.module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "windows_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:247867391235:security-group/sg-007e892ad2771894d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-007e892ad2771894d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "terraform-20240121003702048900000006",
            "name_prefix": "terraform-",
            "owner_id": "247867391235",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-030912113de913a72"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.my_igw",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_route_table_association.public_subnet_association",
            "module.vpc.aws_security_group.my_security_group",
            "module.vpc.aws_security_group.windows_security_group",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.my_vpc",
            "module.windows_instance.module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.windows_instance.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:247867391235:subnet/subnet-012d71394d839f2fd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1a",
            "availability_zone_id": "cac1-az1",
            "cidr_block": "10.0.200.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-012d71394d839f2fd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "247867391235",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-030912113de913a72"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.my_igw",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_route_table_association.public_subnet_association",
            "module.vpc.aws_security_group.my_security_group",
            "module.vpc.aws_security_group.windows_security_group",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.my_vpc",
            "module.windows_instance.module.vpc.aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:247867391235:subnet/subnet-00983e6a06f87541a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1b",
            "availability_zone_id": "cac1-az2",
            "cidr_block": "10.0.201.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00983e6a06f87541a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "247867391235",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-030912113de913a72"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.my_igw",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_route_table_association.public_subnet_association",
            "module.vpc.aws_security_group.my_security_group",
            "module.vpc.aws_security_group.windows_security_group",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.my_vpc",
            "module.windows_instance.module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.windows_instance.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:247867391235:subnet/subnet-09da15302ea8e09fc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1a",
            "availability_zone_id": "cac1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09da15302ea8e09fc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "247867391235",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-030912113de913a72"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.my_igw",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_route_table_association.public_subnet_association",
            "module.vpc.aws_security_group.my_security_group",
            "module.vpc.aws_security_group.windows_security_group",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.my_vpc",
            "module.windows_instance.module.vpc.aws_internet_gateway.my_igw",
            "module.windows_instance.module.vpc.aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:247867391235:subnet/subnet-04dc4fc7a16707750",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1b",
            "availability_zone_id": "cac1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04dc4fc7a16707750",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "247867391235",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-030912113de913a72"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.my_igw",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_route_table_association.public_subnet_association",
            "module.vpc.aws_security_group.my_security_group",
            "module.vpc.aws_security_group.windows_security_group",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.my_vpc",
            "module.windows_instance.module.vpc.aws_internet_gateway.my_igw",
            "module.windows_instance.module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.windows_instance.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:247867391235:vpc/vpc-030912113de913a72",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-023e4571374270f84",
            "default_route_table_id": "rtb-0573b8459a0bf07db",
            "default_security_group_id": "sg-0db6b399fc3e9a48b",
            "dhcp_options_id": "dopt-1c251774",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-030912113de913a72",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0573b8459a0bf07db",
            "owner_id": "247867391235",
            "tags": {
              "Name": "my-vpc"
            },
            "tags_all": {
              "Name": "my-vpc"
            }
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.my_igw",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_route_table_association.public_subnet_association",
            "module.vpc.aws_security_group.my_security_group",
            "module.vpc.aws_security_group.windows_security_group",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    }
  ]
}